--- a/package.json
+++ b/package.json
@@ -10,9 +10,25 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.11",
+    "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
+    "lucide-react": "^0.525.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
@@ -25,6 +41,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "husky": "^9.1.7",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   },
   "main": "commitlint.config.js",
